<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_x_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground" >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ImageView
        android:id="@+id/main_x_iv_border_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_group_48border"
        android:contentDescription="@string/image_description"
        app:layout_constraintTop_toBottomOf="@id/main_x_appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_x_toolbar_words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_x_iv_border_top"
        app:layout_constraintStart_toStartOf="@id/main_x_iv_border_top"
        app:layout_constraintEnd_toEndOf="@id/main_x_iv_border_top">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/main_tv_spanish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_opt_spanish"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_centerVertical="true"
                android:textSize="16sp"/>
            <ImageView
                android:layout_width="?actionBarSize"
                android:layout_height="?actionBarSize"
                android:src="@drawable/ic_bird_left"
                android:padding="12dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/image_description" />

            <TextView
                android:id="@+id/main_tv_otomi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_opt_otomi"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"/>

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <ImageView
        android:id="@+id/main_x_iv_border_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_group_48border"
        android:contentDescription="@string/image_description"
        app:layout_constraintTop_toBottomOf="@id/main_x_toolbar_words"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_til_input_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_x_iv_border_bottom">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/main_hint_search"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/main_btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_translate_spanish"
        app:layout_constraintTop_toBottomOf="@id/main_til_input_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/main_tv_output_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_btn_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ListView
        android:id="@+id/main_lv_output_search"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/main_tv_output_search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <ListView
        android:id="@+id/main_lv"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>